# UFO_Dermatologist

./: CMakeLists.txt  Credentials.txt  Ideas.txt  README.md  Useful internatiolization links.txt  instructions.txt  useful Qt docs.txt
internal_libraries/: CMakeLists.txt
internal_libraries/lib_app_theme/include/: app_theme.hpp
internal_libraries/lib_app_theme/src/: app_theme.cpp
internal_libraries/lib_database/: CMakeLists.txt
internal_libraries/lib_database/include/: database.hpp  patient.hpp
internal_libraries/lib_database/src/: database.cpp  patient.cpp
internal_libraries/lib_date/: CMakeLists.txt
internal_libraries/lib_date/include/: date.hpp
internal_libraries/lib_date/src/: date.cpp
internal_libraries/lib_filter/: CMakeLists.txt
internal_libraries/lib_filter/include/: filter.hpp
internal_libraries/lib_filter/src/: filter.cpp
internal_libraries/lib_image_provider/: CMakeLists.txt
internal_libraries/lib_image_provider/include/: image_provider.hpp
internal_libraries/lib_image_provider/src/: image_provider.cpp
internal_libraries/lib_notifier/: CMakeLists.txt
internal_libraries/lib_notifier/include/: notifier.hpp
internal_libraries/lib_notifier/src/: notifier.cpp
internal_libraries/lib_printer/: CMakeLists.txt
internal_libraries/lib_printer/include/: printer.hpp
internal_libraries/lib_printer/src/: printer.cpp
main/include/: main.hpp
main/src/: main.cpp
resources/html/: template.html
resources/json/: placeholder.json
resources/json/themes/theme_ufo/: ufo_dark.json  ufo_light.json
resources/qml/: main.qml
resources/qml/components/: UFO_Button.qml  UFO_CheckBox.qml  UFO_ComboBox.qml  UFO_Delegate_Consultation.qml  UFO_Delegate_Diagnosis.qml  UFO_Delegate_Image.qml  UFO_Delegate_LabTest.qml  UFO_Delegate_MedicalDrug.qml  UFO_Delegate_Procedure.qml  UFO_Delegate_Search.qml  UFO_Delegate_Treatment.qml  UFO_Dialog.qml  UFO_FullScreen.qml  UFO_GroupBox.qml  UFO_ListDelegateButton.qml  UFO_ListDelegate_Treatments.qml  UFO_Menu.qml  UFO_MenuBarItem.qml  UFO_MenuItem.qml  UFO_MenuItemArrow.qml  UFO_MenuItemIndicator.qml  UFO_OperationResult.qml  UFO_Page.qml  UFO_PatientBasicDataEditor.qml  UFO_PatientConsultationsEditor.qml  UFO_PatientDiagnosesEditor.qml  UFO_PatientImagesEditor.qml  UFO_PatientLabTestsEditor.qml  UFO_PatientMedicalDrugsEditor.qml  UFO_PatientProceduresEditor.qml  UFO_PatientTreatmentsEditor.qml  UFO_ScrollBar.qml  UFO_SearchDelegate.qml  UFO_SearchSideBar.qml  UFO_SearchSideBarButton.qml  UFO_SideBar.qml  UFO_SideBarTextField.qml  UFO_SideBar_Button.qml  UFO_SideBar_CheckBox.qml  UFO_SideBar_ComboBox.qml  (+9 more)
resources/qml/components_custom/: UFO_Dialog.qml  UFO_OperationResult.qml  UFO_RoundProgressBar.qml
resources/qml/components_ufo/: UFO_ListDelegate.qml  UFO_ListDelegate_Treatments.qml  UFO_SideBar.qml
resources/qml/pages/: UFO_About.qml  UFO_Create.qml  UFO_Demo.qml  UFO_Edit.qml  UFO_EditPatient.qml  UFO_Notify.qml  UFO_Print.qml  UFO_Search.qml  UFO_SearchHistory.qml  UFO_Settings.qml
