# [[ Add Internal Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_app_theme")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_database")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_date")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_filter")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_printer")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_notifier")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib_image_provider")

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Internal Libraries ]]
